apps/dotnet/aspnet-core-dotnet-core/dotnet-deployment.yml
# deployment-combined.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aspnet-core-deployment
  labels:
    app: aspnet-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aspnet-core
  template:
    readinessProbe:
      httpGet:
      path: /healthz
      port: 80
      initialDelaySeconds: 5
      periodSeconds: 10
    livenessProbe:
      httpGet:
      path: /healthz
      port: 80
      initialDelaySeconds: 15
      periodSeconds: 20
    metadata:
      labels:
        app: aspnet-core
    spec:
      containers:
      - name: aspnet-core-container
        image: devacrfcaks.azurecr.io/aspnet-core-dotnet-core:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        command: ["dotnet", "aspnet-core-dotnet-core.dll"]
---
apiVersion: v1
kind: Service
metadata:
  name: aspnet-core-service
  labels:
    app: aspnet-core
spec:
  type: LoadBalancer
  selector:
    app: aspnet-core
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dotnet-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
      - dotnet.freundcloud.com
      secretName: your-tls-secret
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aspnet-core-service
            port:
              number: 80
